# rogue-finder

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  cliff.toml  nmap_gui_system_spec.md  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml  pr-ci.yml  pyinstaller.yml  release.yml  tag-changelog.yml
assets/icons/: rogue-finder.icns
docs/: architecture_overview.md  rogue_finder_manual_en.md  rogue_finder_manual_ja.md  scan_execution.md
src/nmap_gui/: __init__.py  cancel_token.py  config.py  error_codes.py  eta.py  exporters.py  gui.py  i18n.py  job_eta.py  main.py  models.py  nmap_runner.py  privileged_runner.py  process.py  rating.py  result_grid.py  scan_controller.py  scan_executor.py  scan_manager.py  state_store.py  storage_warnings.py  utils.py
src/nmap_gui/gui/: __init__.py  app_icon.py  config_editor.py  export_toolbar.py  main_window.py  privileges.py  result_grid.py  result_store.py  safe_scan_controller.py  safe_scan_dialog.py  safe_scan_report_formatter.py  safe_scan_report_viewer.py  scan_controls.py  scan_log_dialog.py  state_controller.py  summary_panel.py
src/nmap_gui/i18n/: __init__.py  en.py  ja.py
src/nmap_gui/infrastructure/: __init__.py  config.py  (+2 more)
tests/: test_cancel_token.py  test_config.py  test_eta.py  test_exporters.py  test_gui_controllers.py  test_i18n_catalogs.py  test_i18n_helpers.py  test_job_eta.py  test_main.py  test_models.py  test_nmap_runner.py  test_privileged_runner.py  test_rating.py  test_scan_executor.py  test_scan_manager.py  test_state_store.py  test_utils.py
(+20 files in other folders)
