[project]
name = "rogue-finder"
version = "0.0.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
addopts = "--spec"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.poe.tasks.test]
shell = """
uv run coverage run -m pytest
uv run coverage xml
uv run coverage html
"""

[tool.poe.tasks.lint]
cmd = "uv run ruff check src tests"

[tool.poe.executor]
type = "simple"

[tool.coverage.run]
branch = true
source = ["src"]
parallel = false
omit = ["*/nmap_gui/gui/*"]

[tool.coverage.report]
skip_empty = true
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.poe.tasks.build-macos]
cmd = """
./.venv/bin/pyinstaller \
  src/nmap_gui/main.py \
  --name rogue-finder \
  --noconfirm \
  --onefile \
  --windowed \
  --icon assets/icons/rogue-finder.icns \
  "--add-data=assets/icons/rogue-finder.icns:assets/icons" \
  "--add-data=assets/icons/icon_master.png:assets/icons"
"""
env.PYINSTALLER_CONFIG_DIR = "{project_root}/.pyinstaller"
env.PYINSTALLER_CACHE_DIR = "{project_root}/.pyinstaller"

[tool.ruff]
target-version = "py311"
line-length = 130

[tool.ruff.lint]
extend-select = ["B", "C90", "E", "F", "I", "PLR", "RUF", "SIM", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
"src/nmap_gui/gui/safe_scan_controller.py" = ["PLR0913"]
"src/nmap_gui/gui/state_controller.py" = ["PLR0913"]
"src/nmap_gui/nmap_runner.py" = ["PLR0913"]
